-- Iran Dade Service - Database Initialization
-- Source of Truth DDL
-- PostgreSQL 18
-- All primary keys use UUID v7 (generated by application layer)
-- Enum values stored directly as VARCHAR(3) columns based on Python enum values

-- =============================================================================
-- META DATA PACKAGE
-- =============================================================================

CREATE TABLE geography_dimension
(
    geography_dimension_uid        UUID PRIMARY KEY,
    created_at                     TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    created_by                     VARCHAR(255)             NOT NULL,
    name_fa                        VARCHAR(255)             NOT NULL,
    name_en                        VARCHAR(255)             NOT NULL,
    description_fa                 TEXT,
    description_en                 TEXT,
    code                           VARCHAR(255),
    valid_start_at                 TIMESTAMP WITH TIME ZONE,
    valid_end_at                   TIMESTAMP WITH TIME ZONE,
    dim_type        VARCHAR(3)               NOT NULL,
    sub_country_type                VARCHAR(3),
    parent_geography_dimension_uid UUID                     REFERENCES geography_dimension (geography_dimension_uid) ON DELETE SET NULL
);

CREATE INDEX idx_geo_dim_parent ON geography_dimension (parent_geography_dimension_uid);



CREATE TABLE time_dimension
(
    time_dimension_uid        UUID PRIMARY KEY,
    created_at                TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    created_by                VARCHAR(255)             NOT NULL,
    name                      VARCHAR(255)             NOT NULL,
    after_origin              BOOLEAN                  NOT NULL DEFAULT TRUE,
    description               TEXT,
    century_value             INTEGER,
    year_value                INTEGER,
    month_value               INTEGER,
    day_value                 INTEGER,
    day_of_week_value         INTEGER,
    date_value                DATE,
    datetime_value            TIMESTAMP WITH TIME ZONE,
    calendar_type        VARCHAR(3)               NOT NULL,
    time_dimension_type  VARCHAR(3)               NOT NULL,
    parent_time_dimension_uid UUID                     REFERENCES time_dimension (time_dimension_uid) ON DELETE SET NULL
);

CREATE INDEX idx_time_dim_parent ON time_dimension (parent_time_dimension_uid);


CREATE TABLE day_dimension
(
    day_dimension_uid UUID PRIMARY KEY,
    created_at        TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    created_by        VARCHAR(255)             NOT NULL,
    grg_name          VARCHAR(255)             NOT NULL,
    jal_name          VARCHAR(255) NULL,
    lun_name          VARCHAR(255) NULL,

    grg_century       INTEGER,
    grg_year          INTEGER,
    grg_month         INTEGER,
    grg_day           INTEGER,
    grg_day_of_week   INTEGER,

    jal_century       INTEGER,
    jal_year          INTEGER,
    jal_month         INTEGER,
    jal_day           INTEGER,
    jal_day_of_week   INTEGER,

    date_value        DATE,

    grg_month_uid     UUID                     REFERENCES time_dimension (time_dimension_uid) ON DELETE SET NULL,
    jal_month_uid     UUID                     REFERENCES time_dimension (time_dimension_uid) ON DELETE SET NULL
);

CREATE INDEX idx_day_dim_grg_parent ON day_dimension (grg_month_uid);
CREATE INDEX idx_day_dim_jal_parent ON day_dimension (jal_month_uid);


CREATE TABLE concept
(
    concept_uid        UUID PRIMARY KEY,
    created_at         TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    created_by         VARCHAR(255)             NOT NULL,
    name               VARCHAR(255)             NOT NULL,
    alt_name1          VARCHAR(255)             NOT NULL,
    alt_name2          VARCHAR(255)             NOT NULL,
    alt_name3          VARCHAR(255)             NOT NULL,
    level_type    VARCHAR(3)               NOT NULL,

    description        TEXT,
    parent_concept_uid UUID                     REFERENCES concept (concept_uid) ON DELETE SET NULL
);
CREATE INDEX idx_concept_parent ON concept (parent_concept_uid);



CREATE TABLE measurement_unit
(
    measurement_unit_uid   UUID PRIMARY KEY,
    created_at         TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    created_by         VARCHAR(255)             NOT NULL,
    name               VARCHAR(255)             NOT NULL,
    alt_name           VARCHAR(255)             NOT NULL,
    unit_coefficient   INTEGER                           DEFAULT 1,
    unit_type     VARCHAR(3)               NOT NULL,
    base_year          INTEGER,
    description        TEXT
);



CREATE TABLE dimension_class
(
    dimension_class_uid UUID PRIMARY KEY,
    created_at         TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    created_by         VARCHAR(255)             NOT NULL,
    name               VARCHAR(255)             NOT NULL,
    alt_name1          VARCHAR(255)             NOT NULL,
    alt_name2          VARCHAR(255)             NOT NULL,
    alt_name3          VARCHAR(255)             NOT NULL,
    description        TEXT


);


CREATE TABLE dimension_value
(
    dimension_value_uid        UUID PRIMARY KEY,
    created_at                 TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    created_by                 VARCHAR(255)             NOT NULL,
    name                       VARCHAR(255)             NOT NULL,
    alt_name1                  VARCHAR(255)             NOT NULL,
    alt_name2                  VARCHAR(255)             NOT NULL,
    alt_name3                  VARCHAR(255)             NOT NULL,
    description                TEXT,


    parent_dimension_value_uid UUID                     REFERENCES dimension_value (dimension_value_uid) ON DELETE SET NULL,
    dimension_class_uid         UUID                     NOT NULL REFERENCES dimension_class (dimension_class_uid) ON DELETE SET NULL
);

CREATE INDEX idx_dimension_parent ON dimension_value (parent_dimension_value_uid);



-- =============================================================================
-- DATA PACKAGE
-- =============================================================================

CREATE TABLE indicator
(
    indicator_uid UUID PRIMARY KEY,
    created_at    TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    created_by    VARCHAR(255)             NOT NULL,
    name          VARCHAR(255)             NOT NULL,
    description   TEXT,
    concept_uid          UUID                     REFERENCES concept (concept_uid) ON DELETE SET NULL,
    formality_type       VARCHAR(3)               NOT NULL,
    time_dimension_type VARCHAR(3)               NOT NULL,
    measurement_unit_uid         UUID                     NOT NULL REFERENCES measurement_unit (measurement_unit_uid) ON DELETE RESTRICT
);


CREATE INDEX idx_indicator_measurement_unit ON indicator (measurement_unit_uid);


CREATE INDEX idx_indicator_concept ON indicator (concept_uid);




-- =============================================================================
-- SOURCE PACKAGE
-- =============================================================================

CREATE TABLE organization
(
    organization_uid UUID PRIMARY KEY,
    created_at      TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    created_by      VARCHAR(255)             NOT NULL,
    name            VARCHAR(255)             NOT NULL,
    description     TEXT,
    is_domestic     BOOLEAN                  NOT NULL DEFAULT TRUE,
    website         VARCHAR(255)
);


CREATE TABLE publisher
(
    publisher_uid UUID PRIMARY KEY,
    created_at    TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    created_by    VARCHAR(255)             NOT NULL,
    name          VARCHAR(255)             NOT NULL,
    description   TEXT,
    is_domestic   BOOLEAN                  NOT NULL DEFAULT TRUE,
    website       VARCHAR(255)
);


CREATE TABLE dataset
(
    dataset_uid   UUID PRIMARY KEY,
    created_at    TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    created_by    VARCHAR(255)             NOT NULL,
    name          VARCHAR(255)             NOT NULL,
    description   TEXT,
    url           VARCHAR(2048),
    publisher_uid UUID                     NOT NULL REFERENCES publisher (publisher_uid) ON DELETE SET NULL
);

CREATE INDEX idx_dataset_publisher ON dataset (publisher_uid);


CREATE TABLE source_document
(
    source_document_uid      UUID PRIMARY KEY,
    created_at      TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    created_by      VARCHAR(255)             NOT NULL,
    url             VARCHAR(2048),
    os_path         VARCHAR(1024),
    source_type VARCHAR(3)              NOT NULL,
    fetched_at      TIMESTAMP WITH TIME ZONE,
    publisher_uid UUID                     NOT NULL REFERENCES publisher (publisher_uid) ON DELETE SET NULL,
    dataset_uid   UUID                     REFERENCES dataset (dataset_uid) ON DELETE SET NULL
);

CREATE INDEX idx_source_doc_publisher ON source_document (publisher_uid);


CREATE TABLE observation
(
    observation_uid         UUID PRIMARY KEY,
    created_at              TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    created_by              VARCHAR(255)             NOT NULL,
    value           DECIMAL(28, 10),
    indicator_uid              UUID                     NOT NULL REFERENCES indicator (indicator_uid) ON DELETE CASCADE,
    observation_type   VARCHAR(3)               NOT NULL,
    formality_type     VARCHAR(3)               NOT NULL,
    review_status_type VARCHAR(3)               NOT NULL,
    published_at            TIMESTAMP WITH TIME ZONE,
    geography_dimension_uid UUID                     REFERENCES geography_dimension (geography_dimension_uid) ON DELETE SET NULL,
    time_dimension_uid      UUID                     REFERENCES time_dimension (time_dimension_uid) ON DELETE SET NULL,
    source_document_uid     UUID                     REFERENCES source_document (source_document_uid) ON DELETE SET NULL
);

CREATE INDEX idx_observation_indicator ON observation (indicator_uid);
CREATE INDEX idx_observation_geo ON observation (geography_dimension_uid);
CREATE INDEX idx_observation_time ON observation (time_dimension_uid);
CREATE INDEX idx_observation_source ON observation (source_document_uid);


CREATE TABLE observation_dimension_value_rel
(
    observation_uid     UUID NOT NULL REFERENCES observation (observation_uid) ON DELETE CASCADE,
    dimension_value_uid UUID NOT NULL REFERENCES dimension_value (dimension_value_uid) ON DELETE CASCADE,
    PRIMARY KEY (observation_uid, dimension_value_uid)
);



-- =============================================================================
-- VISUALIZATION PACKAGE
-- =============================================================================

CREATE TABLE chart
(
    chart_uid   UUID PRIMARY KEY,
    created_at  TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    created_by  VARCHAR(255)             NOT NULL,
    name        VARCHAR(255)             NOT NULL,
    description TEXT
);

CREATE TABLE dashboard
(
    dashboard_uid UUID PRIMARY KEY,
    created_at    TIMESTAMP WITH TIME ZONE NOT NULL DEFAULT NOW(),
    created_by    VARCHAR(255)             NOT NULL,
    name          VARCHAR(255),
    description   TEXT
);

CREATE TABLE dashboard_chart_rel
(
    dashboard_uid UUID NOT NULL REFERENCES dashboard (dashboard_uid) ON DELETE CASCADE,
    chart_uid     UUID NOT NULL REFERENCES chart (chart_uid) ON DELETE CASCADE,
    PRIMARY KEY (dashboard_uid, chart_uid)
);

CREATE INDEX idx_dashboard_chart_chart ON dashboard_chart_rel (chart_uid);
CREATE INDEX idx_dashboard_chart_dashboard ON dashboard_chart_rel (dashboard_uid);
