@startuml
title Iran Dade Data Model


package "Visualization" as visualization_package{

    class Chart  <<ManagerMixin>> #paleturquoise{
        uuid chart_uid
        str name
        str description
    }

    class Dashboard  <<ManagerMixin>> #paleturquoise{
        uuid dashboard_uid
        str name
        str description
    }

    class Card <<ManagerMixin>> #paleturquoise{

    }

    Chart "*" -- "*" Dashboard
}


package "Ontology" as  ontology_pkg{

     class Organization #linen{
        uuid organization_uid
        string name
        string description
        bool is_domestic
        string website
    }

}



package "Source" as source_pkg{



    class DataSet #linen{
        uuid dataset_uid
        string name
        string description

        string url

    }

    class Publisher #linen{
        uuid publisher_uid
        string name
        string description
        bool is_domestic
        string website


    }


    class SourceDocument #linen{
        uuid source_document_uid
        string url
        string os_path
        SourceType source_type
        datetime fetched_at

    }

    enum SourceType #linen{
        WEB<WEB>
        PDF<PDF>
        WORD<WRD>
        EXCEL<EXC>
        PRESENTATION<PRS>
    }


    SourceDocument "*"--"1" Publisher
    SourceDocument "*"--"1-0" DataSet
    DataSet "*"--"1" Publisher
}
package Utils{


    enum   UnitType #beige{

        '   distance
        METER<MTR>
        ' something like inflation
        UNIT<UNT>
        '   area
        SQUARE_METER<MT2>
        PERSON<PRS>
        IIR<IIR>
        USD<USD>
        PERCENT<PCT>
        INDEX_PONT<IXP>


    }
}



package "Meta Data" as metadata_package{

    ' unit of measure used for observation
    entity MeasurementUnit  #lightgreen {
      uuid measurement_unit_uid
      string name
      string alt_name
      UnitType unit_type

      int unit_coefficient
      int base_year
      text description
    }

    class GeographyDimension #lightgreen{
        uuid geography_dimension_uid
        str name_fa
        str name_en
        text description_fa
        text description_en
        datetime valid_start_at
        datetime valid_end_at

        string code
        SubCountryType sub_country_type
        GeographyDimType dim_type
    }

    enum SubCountryType  #beige{
        PROVINCE<PRO>
        TERRITORY<TRI>
        STATE<STA>


    }
    enum GeographyDimType  #beige{

        CONTINENT<CON>
        COUNTRY<COU>
        SUB_COUNTRY<SBC>
        COUNTY<CTY>
        CITY<CIT>
    }



    GeographyDimension "n"--"0-1" GeographyDimension : parent/child

'    some period of tome like month,year in some calendar like year 1404 in jalali cal
    class TimeDimension  <<ManagerMixin>> #lightgreen{
        uuid time_dimension_uid
        str name
        str description
        bool after_origin
        int century_value
        int year_value
        int month_value
        int day_value
        int day_of_week_value
        date date_value
        datetime datetime_value
        CalendarType calendar_type

        TimeDimensionType time_dimension_type

    }

    TimeDimension "n"--"0-1" TimeDimension : parent/child

' real calendar day in some calendar
    class DayDimension #lightgreen{
        uuid day_dimension_uid
        str grg_name
        str jal_name
        str lun_name
        int grg_century
        int grg_year
        int grg_month
        int grg_day
        int grg_day_of_week
        int jal_century
        int jal_year
        int jal_month
        int jal_day
        int jal_day_of_week
        date date_value
    }

DayDimension "n" -up- "0-1" TimeDimension : grg_month
DayDimension "n" -up- "0-1" TimeDimension : jal_month

    enum CalendarType  #beige{

        LUNAR<LUN>
        GREGORIAN<GRG>
        JALALI<JAL>

    }


    enum TimeDimensionType  #beige{


        CENTURY<CEN>
        YEAR<YEA>
        MONTH<MON>
        QUARTER<QRT>
        WEEK<WEE>
        DAY<DAY>

    }






    enum ConceptLevelType  #beige{
        CLUSTER<CLS>
        DOMAIN<DOM>
        SUBDOMAIN<SDO>
        TOPIC<TOP>


    }

    ' Concept
    ' A conceptual topic or subject area used to organize knowledge.
    ' Concepts represent what is being studied or analyzed
    ' levels are in ConceptLevelType
    ' (e.g., Inflation, Unemployment, GDP, Poverty).
    class Concept  <<ManagerMixin>> #lightgreen{
        uuid concept_uid
        datetime created_at
        str name
        str alt_name1
        str alt_name2
        str alt_name3
        str description
        ConceptLevelType level_type
    }



    Concept "n"--"0-1" Concept : parent/child

    ' Dimension Class
    ' Defines a classification axis used to segment or analyze
    ' measures.
    ' Time  Dimensions exceptionally managed in DayDimension,TimeDimension
    ' Geography  Dimensions exceptionally managed in GeographyDimension
    ' Dimension class  describe the type of breakdown, such as:
    ' - Gender
    ' - Age Group


    class DimensionClass  <<ManagerMixin>> #lightgreen{
        uuid dimension_class_uid
        datetime created_at
        str name
        str alt_name1
        str alt_name2
        str alt_name3

        str description
    }


    ' Dimension Value
    ' A specific member of a dimension class.
    '
    ' Dimension values provide the actual category used in a
    ' measure breakdown.
    '
    ' Examples:
    ' Dimension class: Geography
    ' Values: Iran, Tehran Province, Isfahan Province
    '
    ' Dimension class: Gender
    ' Values: Male, Female
    class DimensionValue  <<ManagerMixin>> #lightgreen{
        uuid dimension_value_uid
        datetime created_at
        str name
        str alt_name1
        str alt_name2
        str alt_name3

        str description
    }


' Indicator
' A measurable statistical indicator associated with a concept.
' Indicators define what is observed or reported and may
' be represented by one or more measures over time
' list of data will be stored in observation
'
' Examples:
' - Inflation Rate[indicator],  specific number in time, category[observation]
' - Unemployment Rate
' - GDP Growth Rate
    class Indicator<<BE>> #lightgreen{
        uuid indicator_uid
        str name
        str description
        FormalityType formality_type
        TimeDimensionType time_dimension_type
    }

   DimensionValue "n"--"1" DimensionClass
   DimensionValue "n"--"0-1" DimensionValue :parent/child



}


package "Data" as data_package{




' Observation
' A quantitative observation of a indicator for a specific
' time period and dimensional context.
'
' A Observation contains the actual reported value together with
' its unit, methodology, source, and dimensional breakdowns.
'
' Example:
' Inflation Rate = 35.2%
' Country = Iran
' Year = 2024
    class Observation #skyblue {
      uuid observation_uid
      decimal value
      ObservationType observation_type
      FormalityType formality_type
      ReviewStatusType review_status_type
      datetime published_at
    }


    enum ReviewStatusType #beige{
        DISCOVERED<DSC>
        REVIEWED<REV>
    }


    enum ObservationType #beige{
        OBSERVED<OBS>
        ESTIMATED<EST>

    }

    enum FormalityType  #beige{
        FORMAL<FRM>
        SEMIFORMAL<SFM>
        INFORMAL<INF>
        MIXED<MIX>

    }









' from every dimension class just one dimension value can be relate to single observation
    Observation "*" -- "*" DimensionValue


    Observation "n"-down-"0-1" GeographyDimension
    Observation "n"-down-"0-1" TimeDimension

    MeasurementUnit "1"--"n" Indicator

    Observation "n"--"0-1" SourceDocument
}






    Indicator "1" -- "*" Observation




    Indicator "*"-down-"1" Concept

@enduml
